--- a/src/main/webapp/pages/clientes.xhtml
+++ b/src/main/webapp/pages/clientes.xhtml
@@ -13,11 +13,16 @@
 		<p:panel header="Cliente- listagem">
 
 			<p:dataTable emptyMessage="nenhum registro encontrado :("
-				paginator="true">
-				<p:column headerText="Nome" sortBy=""></p:column>
-				<p:column headerText="CPF"></p:column>
+				paginator="true"  value="#{clienteBean.clientes}" var="cliente">
+				<p:column headerText="Nome" sortBy="">
+					<h:outputLabel value="#{cliente.pessoa.nome}"/>
+				</p:column>
+				<p:column headerText="CPF">
+					<h:outputLabel value="{cliente.pessoa.cpf}"/>
+				</p:column>
 				<p:column headerText="Data de Cadrastamento"></p:column>
 				<p:column headerText="Liberado"></p:column>
+				<p:column headerText="Pessoa"></p:column>
 				<p:column headerText="Opçao"></p:column>
 
 				<f:facet name="footer">
